Fixed a typo in a section name.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407391

--- a/mpqc/doc/compile.dox
+++ b/mpqc/doc/compile.dox
@@ -290,7 +290,7 @@ older versions of GNU make use <tt>make JOBS=-j4</tt>.
 install_devel</tt>, however, <tt>make install</tt> must be also be run to
 install the files needed for run-time support.
 
-\section compileccheck Checking the Compilation
+\section compilecheck Checking the Compilation
 
 See \ref mpqcval for instructions for checking your compilation.
 
