updated input groups to reflect intv3/cints cca inputs
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407479

--- a/mpqc/src/bin/mpqc/mpqcval.dox
+++ b/mpqc/src/bin/mpqc/mpqcval.dox
@@ -105,7 +105,9 @@ The input files in the verification suite are divided into several categories:
 
   <dt><tt>mp2r12</tt><dd>More tests of MP2-R12.
 
-  <dt><tt>ccaint</tt><dd>Tests of embedded CCA integrals components.
+  <dt><tt>ccaintv3</tt><dd>Tests of embedded CCA integrals components using <tt>intv3</tt>.
+
+  <dt><tt>ccacints</tt><dd>Tests of embedded CCA integrals components using <tt>cints</tt>.
 
 </dl>
 
