o note that angstroms are the default  o show an example of the use of units in the molecule specification
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407536

--- a/mpqc/src/bin/mpqc/mpqcsimp.dox
+++ b/mpqc/src/bin/mpqc/mpqcsimp.dox
@@ -12,7 +12,7 @@ exchange-correlation functional:
 optimize: yes
 method: KS (xc = B3LYP)
 basis: 3-21G*
-molecule:
+molecule: (angstrom)
     O    0.172   0.000   0.000
     H    0.745   0.000   0.754
     H    0.745   0.000  -0.754
@@ -31,7 +31,7 @@ The accepted keywords are:
 
   <dl>
      <dt><tt>bohr</tt><dd> The coordinates are given in Bohr.
-     <dt><tt>angstrom</tt><dd>  The coordinates are given in Angstroms.
+     <dt><tt>angstrom</tt><dd>  The coordinates are given in Angstroms (the default).
      <dt><tt>charge</tt><dd>  This option can be given after an "element x y z"
                   quadruple.  This will override the charge on the
                   atom.  For example, <tt>(charge = 0)</tt> can be given
