Add an option to allow the number of processes used for each job to be set.  Before, one process was allocated for each processor in each node.
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407618

--- a/mpqc/src/bin/mpqc/mpqcrun.dox
+++ b/mpqc/src/bin/mpqc/mpqcrun.dox
@@ -32,6 +32,7 @@ mpqcrun takes the following command line options:
   <dt><tt>--small</tt><dd>Skip big runs in verification suite.
   <dt><tt>--nnodeperjob</tt> n<dd>Run with n nodes per job.  If this is <tt>nnode</tt>, use all available nodes.
   <dt><tt>--nprocpernode</tt> n<dd>Run with n processes per node.
+  <dt><tt>--nprocperjob</tt> n<dd>Run with n processes per job.  The default is to use all available processors.
   <dt><tt>--nthreadperproc</tt> n<dd>Use n threads per process.
   <dt><tt>--threadgrp</tt> grp<dd>Use the given threading layer.
   <dl>
