first nuclear derivative integrals now working through CCA interfaces using CCA ordering
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407624

--- a/mpqc/src/lib/chemistry/cca/mpqccomponents.dox
+++ b/mpqc/src/lib/chemistry/cca/mpqccomponents.dox
@@ -132,7 +132,7 @@ This is an implementation of the
 Chemistry.QC.GaussianBasis.IntegralEvaluatorFactory interface.
 This factory produces molecular integral evaluator objects 
 based on the MPQC package. 
-This code is experimental and does not currently support derivative integrals.
+This code is experimental, currently supported integrals include first nuclear derivatives.
 
 \subsection evalfacpp Provides Ports
 <ul>
