Added the Runnable class and make mpqc.cc use them for postprocessing. Added preliminary code to write out the electron density on a grid.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%407711

--- a/mpqc/src/bin/mpqc/mpqcoo.dox
+++ b/mpqc/src/bin/mpqc/mpqcoo.dox
@@ -144,6 +144,11 @@ class.
 <dt><tt>print_timings</tt><dd> If this is true, timing information is
         printed at the end of the run.  The default is true.
 
+<dt><tt>run</tt><dd> This gives a vector of objects of type
+        Runnable.  The run method for each of these objects
+        will be called after the calculation completes.  This
+        can be used for computing properties, for example.
+
 </dl>
 
 There are also some utility keywords that tell mpqc some technical
