Update the 2.3.1 release date.
--HG--
branch : release-2-3
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/branches/release-2-3-branch%407805

--- a/mpqc/CHANGES
+++ b/mpqc/CHANGES
@@ -3,7 +3,7 @@
 
 Following is a brief summary of changes made in each release of MPQC.
 
-  * 2006-0x-xx: MPQC-2.3.1
+  * 2006-03-22: MPQC-2.3.1
      o MCSearch added for cubic interpolation during quasi-Newton line
        searches.
      o Added KMLYP method.
