fixed several doxygen warnings
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409035

--- a/mpqc/bin/sc-mkf77sym.dox
+++ b/mpqc/bin/sc-mkf77sym.dox
@@ -14,7 +14,7 @@ sc-mkf77sym <i>input</i> <i>output</i>
 
 sc-mkf77sym requires two arguments: the name of the input file and the name
 of the output file.  The input file contains C preprocessor definitions of
-the form '#define F77_FUNC' where FUNC is the name of a FORTRAN 77
+the form '\#define F77_FUNC' where FUNC is the name of a FORTRAN 77
 function.  The output file assigns these definitions to the C symbol that
 will link with the FORTRAN 77 function.  For example, if FORTRAN symbols
 are formed from the routine name by converting to lowercase and have
